--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -6,10 +6,18 @@ name: WinUI 3 unpackaged app
 on:
   workflow_dispatch:
 
+  pull_request:
+    branches: [ main ]
+    paths:
+      - 'src/**'
+  push:
+    branches: [ main ]
+    paths:
+      - 'src/**'
+      - 'CHANGELOG.md'
+
 jobs:
-
   build:
-
     strategy:
       matrix:
         configuration: [Release]
@@ -17,9 +25,6 @@ jobs:
 
     runs-on: windows-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
-
-    env:
-      Solution_Name: GIMI-ModManager                         # Replace with your solution name, i.e. App1
 
     steps:
     - name: Checkout
@@ -33,9 +38,8 @@ jobs:
       with:
         dotnet-version: 7.0.x
 
-    # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.1
+    - name: Test
+      run: dotnet test ${{ github.workspace }}\src
 
     - name: Build, publish and zip the app
       run: python ${{ github.workspace }}\Build\Release.py
