--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -119,6 +119,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="Assets\Images\characters.json" />
+		<None Remove="Assets\ModPanePlaceholder.webp" />
 		<None Remove="Views\CharacterDetailsPage.xaml" />
 		<None Remove="Views\CharactersPage.xaml" />
 		<None Remove="Views\Controls\FolderSelector.xaml" />
@@ -428,6 +429,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Content Update="Assets\ModPanePlaceholder.webp">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 		<Content Update="Assets\Images\Character_Others.png">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
