feat: Ability to customize merged.ini keys and add link to mod (#22)
feat: Mod thumbnail that can be added to mod via drag and drop or file selector

feat: Warning ' ! ' icon shown on Character overview when multiple mods are active for character

feat: Export Mods function to export all mods managed by JASM to a specified folder

chore: Added Gamebanana shortcut to Character overview for easy access

chore: Improved Startup screen text

chore: Added Freminet

fix: Temporary folder cleanup on application exit

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -59,6 +59,7 @@
 		<Content Remove="Assets\Images\Character_Eula_Thumb.png" />
 		<Content Remove="Assets\Images\Character_Faruzan_Thumb.png" />
 		<Content Remove="Assets\Images\Character_Fischl_Thumb.png" />
+		<Content Remove="Assets\Images\Character_Freminet_Thumb.png" />
 		<Content Remove="Assets\Images\Character_Furina_Thumb.webp" />
 		<Content Remove="Assets\Images\Character_Ganyu_Thumb.png" />
 		<Content Remove="Assets\Images\Character_Gliders_Thumb.webp" />
@@ -119,6 +120,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="Assets\Images\characters.json" />
+		<None Remove="Assets\ModPanePlaceholder.webp" />
 		<None Remove="Views\CharacterDetailsPage.xaml" />
 		<None Remove="Views\CharactersPage.xaml" />
 		<None Remove="Views\Controls\FolderSelector.xaml" />
@@ -231,6 +233,9 @@
 		</None>
 		<None Update="Assets\Images\Character_Fischl_Thumb.png">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Images\Character_Freminet_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Images\Character_Furina_Thumb.webp">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -428,6 +433,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Content Update="Assets\ModPanePlaceholder.webp">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 		<Content Update="Assets\Images\Character_Others.png">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
