--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -27,11 +27,11 @@ jobs:
               { "type": "fix", "section": "Bug Fixes", "hidden": false },
               { "type": "perf", "section": "Performance Improvements", "hidden": false },
               { "type": "style", "section": "Styling", "hidden": false },
-              { "type": "tweak", "section": "Tweaks", "hidden": false }
+              { "type": "tweak", "section": "Tweaks", "hidden": false },
               { "type": "chore", "section": "Miscellaneous", "hidden": false },
               { "type": "docs", "section": "Documentation", "hidden": false },
               { "type": "ci", "section": "Continuous Integration", "hidden": false },
               { "type": "test", "section": "Tests", "hidden": false },
               { "type": "build", "section": "Build System", "hidden": false },
-              { "type": "refactor", "section": "Code Refactoring", "hidden": false },
+              { "type": "refactor", "section": "Code Refactoring", "hidden": false }
             ]
