--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -123,6 +123,7 @@
 		<None Remove="Assets\ModPanePlaceholder.webp" />
 		<None Remove="Views\CharacterDetailsPage.xaml" />
 		<None Remove="Views\CharactersPage.xaml" />
+		<None Remove="Views\Controls\EditableTextBlock.xaml" />
 		<None Remove="Views\Controls\FolderSelector.xaml" />
 		<None Remove="Views\Controls\ModListOverview.xaml" />
 		<None Remove="Views\DebugPage.xaml" />
@@ -408,6 +409,9 @@
 		<None Update="Assets\Images\Character_Zhongli_Thumb.png">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<Page Update="Views\Controls\EditableTextBlock.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</Page>
 		<Page Update="Views\Controls\ModListOverview.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</Page>
