--- a/src/GIMI-ModManager.WinUI/appsettings.json
+++ b/src/GIMI-ModManager.WinUI/appsettings.json
@@ -4,6 +4,6 @@
     "LocalSettingsFile": "LocalSettings.json"
   },
   "Serilog": {
-    "MinimumLevel": "Information"
+    "MinimumLevel": "Debug"
   }
 }
