--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -36,7 +36,8 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Content Remove="Assets\characters.json" />
-		<Content Remove="Assets\Images\AltCharacterSkins\Character_Skin_Amber_Thumb.webp" />
+		<Content Remove="Assets\Images\AltCharacterSkins\Character_Skin_AmberCN_Thumb.webp" />
+		<Content Remove="Assets\Images\AltCharacterSkins\Character_Skin_JeanSea_Thumb.webp" />
 		<Content Remove="Assets\Images\Character_Albedo_Thumb.png" />
 		<Content Remove="Assets\Images\Character_Alhaitham_Thumb.png" />
 		<Content Remove="Assets\Images\Character_Aloy_Thumb.png" />
@@ -121,8 +122,10 @@
 		<Content Remove="Assets\Images\Character_Zhongli_Thumb.png" />
 	</ItemGroup>
 	<ItemGroup>
+		<None Remove="Assets\Fonts\zh-cn2.ttf" />
 		<None Remove="Assets\Images\characters.json" />
 		<None Remove="Assets\ModPanePlaceholder.webp" />
+		<None Remove="Styles\FontTypes.xaml" />
 		<None Remove="Views\CharacterDetailsPage.xaml" />
 		<None Remove="Views\CharactersPage.xaml" />
 		<None Remove="Views\Controls\EditableTextBlock.xaml" />
@@ -170,7 +173,10 @@
 		<None Update="Assets\characters.json">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
-		<None Update="Assets\Images\AltCharacterSkins\Character_Skin_Amber_Thumb.webp">
+		<None Update="Assets\Images\AltCharacterSkins\Character_Skin_AmberCN_Thumb.webp">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Images\AltCharacterSkins\Character_Skin_JeanSea_Thumb.webp">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Images\Character_Albedo_Thumb.png">
@@ -419,6 +425,9 @@
 		<None Update="Assets\Images\Character_Zhongli_Thumb.png">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<Page Update="Styles\FontTypes.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</Page>
 		<Page Update="Views\Controls\SelectCharacterFromGrid.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</Page>
