--- a/src/GIMI-ModManager.Core/GIMI-ModManager.Core.csproj
+++ b/src/GIMI-ModManager.Core/GIMI-ModManager.Core.csproj
@@ -21,7 +21,9 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OneOf" Version="3.0.263" />
-    <PackageReference Include="Polly" Version="7.2.4" />
+    <PackageReference Include="Polly" Version="8.0.0" />
+    <PackageReference Include="Polly.Extensions" Version="8.0.0" />
+    <PackageReference Include="Polly.RateLimiting" Version="8.0.0" />
     <PackageReference Include="Serilog" Version="3.0.1" />
     <PackageReference Include="SharpCompress" Version="0.33.0" />
   </ItemGroup>
