--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -175,6 +175,7 @@
 		<PackageReference Include="Serilog.Sinks.EventLog" Version="3.1.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 		<PackageReference Include="WindowsDisplayAPI" Version="1.3.0.13" />
+		<PackageReference Include="WinUI3Localizer" Version="2.0.1" />
 		<PackageReference Include="WinUIEx" Version="2.3.1" />
 	</ItemGroup>
 
@@ -589,5 +590,15 @@
 
 	<ItemGroup>
 	  <Folder Include="Assets\7z\" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="Strings\**\*.resw">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PRIResource Remove="Strings\en-us\Resources.resw" />
 	</ItemGroup>
 </Project>
