Progress on element filter

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -135,6 +135,13 @@
 		<Content Remove="Assets\Images\Character_Yun_Jin_Thumb.png" />
 		<Content Remove="Assets\Images\Character_Zhongli_Card.png" />
 		<Content Remove="Assets\Images\Character_Zhongli_Thumb.png" />
+		<Content Remove="Assets\Images\Elements\Element_Anemo.svg" />
+		<Content Remove="Assets\Images\Elements\Element_Cryo.svg" />
+		<Content Remove="Assets\Images\Elements\Element_Dendro.svg" />
+		<Content Remove="Assets\Images\Elements\Element_Electro.svg" />
+		<Content Remove="Assets\Images\Elements\Element_Geo.svg" />
+		<Content Remove="Assets\Images\Elements\Element_Hydro.svg" />
+		<Content Remove="Assets\Images\Elements\Element_Pyro.svg" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="Assets\Fonts\zh-cn2.ttf" />
@@ -446,6 +453,27 @@
 		</None>
 		<None Update="Assets\Images\Character_Zhongli_Thumb.png">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Images\Elements\Element_Anemo.svg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Images\Elements\Element_Cryo.svg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Images\Elements\Element_Dendro.svg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Images\Elements\Element_Electro.svg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Images\Elements\Element_Geo.svg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Images\Elements\Element_Hydro.svg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Images\Elements\Element_Pyro.svg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<Page Update="Styles\FontTypes.xaml">
 		  <Generator>MSBuild:Compile</Generator>
