--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -135,12 +135,19 @@
 		<Content Remove="Assets\Images\Character_Yun_Jin_Thumb.png" />
 		<Content Remove="Assets\Images\Character_Zhongli_Card.png" />
 		<Content Remove="Assets\Images\Character_Zhongli_Thumb.png" />
+		<Content Remove="Assets\Images\Elements\Element_Anemo.png" />
 		<Content Remove="Assets\Images\Elements\Element_Anemo.svg" />
+		<Content Remove="Assets\Images\Elements\Element_Cryo.png" />
 		<Content Remove="Assets\Images\Elements\Element_Cryo.svg" />
+		<Content Remove="Assets\Images\Elements\Element_Dendro.png" />
 		<Content Remove="Assets\Images\Elements\Element_Dendro.svg" />
+		<Content Remove="Assets\Images\Elements\Element_Electro.png" />
 		<Content Remove="Assets\Images\Elements\Element_Electro.svg" />
+		<Content Remove="Assets\Images\Elements\Element_Geo.png" />
 		<Content Remove="Assets\Images\Elements\Element_Geo.svg" />
+		<Content Remove="Assets\Images\Elements\Element_Hydro.png" />
 		<Content Remove="Assets\Images\Elements\Element_Hydro.svg" />
+		<Content Remove="Assets\Images\Elements\Element_Pyro.png" />
 		<Content Remove="Assets\Images\Elements\Element_Pyro.svg" />
 	</ItemGroup>
 	<ItemGroup>
@@ -454,22 +461,43 @@
 		<None Update="Assets\Images\Character_Zhongli_Thumb.png">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="Assets\Images\Elements\Element_Anemo.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="Assets\Images\Elements\Element_Anemo.svg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Images\Elements\Element_Cryo.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Images\Elements\Element_Cryo.svg">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="Assets\Images\Elements\Element_Dendro.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="Assets\Images\Elements\Element_Dendro.svg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Images\Elements\Element_Electro.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Images\Elements\Element_Electro.svg">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="Assets\Images\Elements\Element_Geo.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="Assets\Images\Elements\Element_Geo.svg">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="Assets\Images\Elements\Element_Hydro.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="Assets\Images\Elements\Element_Hydro.svg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Images\Elements\Element_Pyro.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Images\Elements\Element_Pyro.svg">
